norm,makefile fixed

--- a/module00/ex01/Makefile
+++ b/module00/ex01/Makefile
@@ -1,5 +1,5 @@
 # Rep: ex01
-all: compile clean
+all: compile
 
 compile:
 	c++ -Wall -Werror -Wextra -std=c++98 PhoneBook.cpp Contact.cpp main.cpp -o program
