--- a/module01/ex00/Makefile
+++ b/module01/ex00/Makefile
@@ -1,4 +1,42 @@
- all: compile
+DEFAULT = \033[0;39m
+GRAY = \033[0;90m
+RED = \033[0;91m
+GREEN = \033[0;92m
+YELLOW = \033[0;93m
+BLUE = \033[0;94m
+MAGENTA = \033[0;95m
+CYAN = \033[0;96m
+WHITE = \033[0;97m
 
- compile:
-	@c++ -Wall -Wextra -Werror -std=c++98 *.cpp -o program
+
+NAME = zombie
+CC = c++
+FLAGS = -Wall -Wextra -Werror -std=c++98
+SRC = main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
+OBJ = $(SRC:.cpp=.o)
+
+all: ${NAME}
+
+${NAME}: ${OBJ}
+	@echo "${MAGENTA}🧑‍💻Compilation has started🧑‍💻${DEFAULT}"
+	@sleep 0.4
+	@${CC} ${FLAGS} ${OBJ} -o ${NAME}
+	@echo "${GREEN}🧟🏿zombie IS READY!!🧟🏿${DEFAULT}"
+	@sleep 0.4
+
+%.o: %.cpp
+	@${CC} ${FLAGS} -c $< -o $@
+
+clean:
+	@rm -f ${OBJ}
+	@echo "${RED}🗑️Object files are being deleted🗑️${DEFAULT}"
+	@sleep 0.4
+
+fclean: clean
+	@rm -f ${NAME}
+	@echo "${RED}🗑️Executable file is being deleted🗑️${DEFAULT}"
+	@sleep 0.4
+
+re: fclean all
+
+.PHONY: all clean
