--- a/module03/ex03/Makefile
+++ b/module03/ex03/Makefile
@@ -1,7 +1,7 @@
-NAME= fragtrap
+NAME= diamondtrap
 CC= c++
 CFLAGS= -Wall -Wextra -Werror -std=c++98
-SRC= main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp
+SRC= main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp DiamondTrap.cpp
 OBJ= $(SRC:.cpp=.o)
 
 all: $(NAME)
