--- a/module03/ex02/Makefile
+++ b/module03/ex02/Makefile
@@ -1,4 +1,4 @@
-NAME= scavtrap
+NAME= fragtrap
 CC= c++
 CFLAGS= -Wall -Wextra -Werror -std=c++98
 SRC= main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp
